--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007AFF",
+    "permissions": [
+        "microphone"
+    ],
     "icons": [
         {
             "src": "icons/icon-192x192.png",
