--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite --https",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,4 +12,4 @@
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.4"
   }
-} 
+}
