--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-basic-ssl": "^1.0.0",
-    "@emotion/babel-plugin": "^11.11.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.4",
-    "@types/node": "^20.10.0"
+    "vite-plugin-pwa": "^0.17.4"
   }
 }
