--- a/package.json
+++ b/package.json
@@ -4,26 +4,35 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.9",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "zustand": "^5.0.1"
+    "@babel/runtime": "^7.24.0",
+    "@babel/core": "^7.24.0",
+    "astro": "^4.3.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.0.1",
+    "zustand": "^5.0.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "@babel/preset-typescript": "^7.24.0",
     "@emotion/babel-plugin": "^11.11.0",
     "@types/node": "^20.10.0",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-basic-ssl": "^1.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.4"
   }
