--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.9",
+    "@babel/core": "^7.24.0",
+    "@babel/runtime": "^7.24.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@babel/runtime": "^7.24.0",
-    "@babel/core": "^7.24.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "astro": "^4.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.0.1",
-    "zustand": "^5.0.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.24.0",
@@ -30,6 +30,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/serviceworker": "^0.0.102",
     "@vitejs/plugin-basic-ssl": "^1.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
